--- a/throt-all-elites/components/Footer.module.css
+++ b/throt-all-elites/components/Footer.module.css
@@ -16,7 +16,8 @@
 .title {
   font-size: 1.5rem;
   font-weight: 700;
-  margin-bottom: 1rem;
+  margin-bottom: 1rem;  background-color: rgba(0, 0, 0, 0.5);
+
 }
 
 .contactInfo {
